--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seung-ju/openapi-generator",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "dist/bin/openapi-generator.cjs.js",
   "module": "dist/bin/openapi-generator.esm.mjs",
   "umd:main": "dist/bin/openapi-generator.umd.js",
@@ -43,12 +43,17 @@
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "rollup": "^2.79.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.9.3",
     "typescript": "^5.4.5"
+  },
+  "peerDependencies": {
+    "prettier": "^3.2.5",
+    "rimraf": "^5.0.5"
   },
   "engines": {
     "node": "^20"
